<resources>
    <string name="app_name">GymRats</string>
    <string name="welcome_title">Welcome to <b>GymRats</b></string>
    <string name="get_started">Get started</string>
    <string name="log_in">Log in</string>
    <string name="start_content_description">3 rats standing on a podium</string>
    <string name="log_in_subtitle">Welcome back.</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="log_in_button">Log in</string>
    <string name="reset_password">Reset password</string>
    <string name="get_started_title">Get started</string>
    <string name="get_started_subtitle">GymRats needs some information before getting started.</string>
    <string name="name_hint">Name</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="create_account_button_title">Create account</string>
    <string name="create_account_footer_text">By signing up you are agreeing to the <a href="https://www.gymrats.app/terms/">Terms of Service</a> and <a href="https://www.gymrats.app/privacy/">Privacy Policy</a>.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Gym Rat</string>
    <string name="nav_header_subtitle">gym@rats.email</string>
    <string name="nav_header_desc">Rat our mouse?</string>
    <string name="action_settings">Settings</string>
    <string name="no_challenges_tile">No active or upcoming challenges.</string>
    <string name="yoga_rat_desc">Rat doing yoga</string>
    <string name="start">Start</string>
    <string name="join">Join</string>
    <string name="menu_home">Home</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    <string name="completed_challenge_description">%1$s</string>
    <string name="menu_completed_challenges">Completed</string>
    <string name="menu_join_challenge">Join</string>
    <string name="menu_create_challenge">Start</string>
    <string name="join_challenge_title">Join challenge</string>
    <string name="create_challenge_title">Create challenge</string>
    <string name="challenge_name_hint">Name</string>
    <string name="challenge_description_hint">Description (optional)</string>
    <string name="challenge_start_date_hint">Start date</string>
    <string name="challenge_end_date_hint">End date</string>
    <string name="challenge_score_by_hint">Score by</string>
    <string name="create_challenge_button">Create challenge</string>
    <string name="join_challenge_subtitle">To join a challenge, you\'ll need the code. You can get it from someone who is already in the group. Once you have it, enter it here.</string>
    <string name="code_hint">Code</string>
    <string name="join_challenge_button">Join</string>
    <string name="change_name_title">Set your name.</string>
    <string name="change_name_hint">Name</string>
    <string name="change_name_button">SAVE</string>
    <string name="change_email_title">Your email can be used for password recovery.</string>
    <string name="change_email_hint">Email</string>
    <string name="change_email_button">SAVE</string>
    <string name="change_password_title">Password must be between 6 and 16 characters long.</string>
    <string name="old_password_hint">Current password</string>
    <string name="new_password_hint">New password</string>
    <string name="change_confirm_password_hint">Confirm new password</string>
    <string name="change_password_button">SAVE</string>
    <string name="about_this_app">
        What\'s up rats!\n\nThis app\'s goal is to act as a social motivator for fitness and health. Whether for a personal or group challenge, it is important to track workouts and hold yourself accountable.
        I hope you\'re finding it useful!
        \n\nThe app\'s source code is open and freely available to <a href="https://gitlab.com/gym-rats">view</a> and do with what you like. New features are added roughly on a monthly basis.
        You can view the progress of ongoing work by taking a look at active <a href="https://gitlab.com/groups/gym-rats/-/milestones">milestones</a>, the list of open <a href="https://gitlab.com/groups/gym-rats/-/issues">issues</a>, or the <a href="https://gitlab.com/groups/gym-rats/-/boards">kanban board.</a>
        \n\nIf you have any ideas or suggestions on how to improve the app, please feel free to <a href="mailto:suggestion@gymrats.app">email</a> me. I also love app store reviews, both positive and negative, so any feedback you have goes a long way.
        \n\nHappy ratting,
        \n\nMack Hasz
        \nCPO (Chief Protein Officer)
    </string>
    <string name="mack_hasz">Mack Hasz</string>
    <string name="description_optional">Description (optional)</string>
    <string name="workout_title">Title</string>
    <string name="post">Post</string>
    <string name="remove">Remove</string>
    <string name="stats">Stats</string>
    <string name="chat">Chat</string>
    <string name="leave">Leave</string>
    <string name="edit">Edit</string>
    <string name="invite">Invite</string>
</resources>
