<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.hasz.gymrats.app.fragment.HomeFragment"
        tools:layout="@layout/fragment_home">
    </fragment>

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.hasz.gymrats.app.fragment.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.hasz.gymrats.app.fragment.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_completed_challenges"
        android:name="com.hasz.gymrats.app.fragment.CompletedChallengesFragment"
        android:label="@string/menu_completed_challenges"
        tools:layout="@layout/fragment_completed_challenges" />

    <fragment
        android:id="@+id/nav_no_challenges"
        android:name="com.hasz.gymrats.app.fragment.NoActiveChallengesFragment"
        tools:layout="@layout/fragment_no_active_challenges">
    </fragment>

    <action
        android:id="@+id/noChallenges"
        app:destination="@id/nav_no_challenges"
        app:enterAnim="@anim/fragment_fade_enter"/>
</navigation>